--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,17 +10,11 @@ FetchContent_MakeAvailable(googletest)
 FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz)
 FetchContent_MakeAvailable(json)
 
-enable_testing()
-add_executable(GBTests sst.cpp)
+add_executable(GBTests sst.cpp opcodes.h)
 
 target_link_libraries(GBTests PRIVATE GTest::gtest_main PRIVATE nlohmann_json::nlohmann_json)
 
-add_custom_target(copy_sst_tests
-    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_LIST_DIR}/copy-sst-tests.cmake
-)
-add_dependencies(GBTests copy_sst_tests)
-
 include(GoogleTest)
 
-gtest_discover_tests(GBTests)
+gtest_discover_tests(GBTests WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
 
