changed the way handle cp ops work

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ FetchContent_Declare(SFML
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
-set(SOURCES DrawUtils.cpp Gameboy.cpp cpu.cpp mmu.cpp HandleInput.h DrawUtils.h Gameboy.h cpu.h mmu.h
+set(SOURCES DrawUtils.cpp Gameboy.cpp cpu.cpp mmu.cpp opcodes.cpp HandleInput.h DrawUtils.h Gameboy.h cpu.h mmu.h
         ppu.cpp
         ppu.h)
 
