--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,9 +7,7 @@ FetchContent_Declare(SFML
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
-set(SOURCES DrawUtils.cpp Gameboy.cpp cpu.cpp mmu.cpp opcodes.cpp HandleInput.h DrawUtils.h Gameboy.h cpu.h mmu.h
-        ppu.cpp
-        ppu.h)
+set(SOURCES "DrawUtils.cpp" "Gameboy.cpp" "Cartridge.cpp" "CPU.cpp" "MMU.cpp" "PPU.cpp" "opcodes.cpp" "MBC1.cpp" "HandleInput.h" "DrawUtils.h" "Gameboy.h" "CPU.h" "MMU.h" "PPU.h" "Cartridge.h" "MBC1.h")
 
 add_library(gb_components STATIC ${SOURCES})
 
