--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ FetchContent_Declare(SFML
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
-set(SOURCES "DrawUtils.cpp" "Gameboy.cpp" "Cartridge.cpp" "CPU.cpp" "MMU.cpp" "PPU.cpp" "opcodes.cpp" "MBC1.cpp" "HandleInput.h" "DrawUtils.h" "Gameboy.h" "CPU.h" "MMU.h" "PPU.h" "Cartridge.h" "MBC1.h" "ppu2.cpp")
+set(SOURCES "draw.cpp" "gameboy.cpp" "cartridge.cpp" "cpu.cpp" "mmu.cpp" "ppu.cpp" "opcodes.cpp" "mbc1.cpp" "handleinput.h" "draw.h" "gameboy.h" "cpu.h" "mmu.h" "ppu.h" "cartridge.h" "mbc1.h" "ppu.cpp")
 
 add_library(gb_components STATIC ${SOURCES})
 
