fixed fps, trying to implement joypad but some issues

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,13 @@
 include(FetchContent)
 FetchContent_Declare(SFML
     GIT_REPOSITORY https://github.com/SFML/SFML.git
-    GIT_TAG 3.0.0
+    GIT_TAG 3.0.1
     GIT_SHALLOW ON
     EXCLUDE_FROM_ALL
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
-set(SOURCES "draw.cpp" "gameboy.cpp" "cartridge.cpp" "cpu.cpp" "mmu.cpp" "ppu.cpp" "opcodes.cpp" "mbc1.cpp" "timer.cpp" "interrupt.cpp" "handleinput.h" "draw.h" "gameboy.h" "cpu.h" "mmu.h" "ppu.h" "cartridge.h" "mbc1.h" "timer.h" "interrupt.h")
+set(SOURCES "draw.cpp" "gameboy.cpp" "cartridge.cpp" "cpu.cpp" "mmu.cpp" "ppu.cpp" "opcodes.cpp" "mbc1.cpp" "timer.cpp" "interrupt.cpp" "joypad.cpp" "handleinput.h" "draw.h" "gameboy.h" "cpu.h" "mmu.h" "ppu.h" "cartridge.h" "mbc1.h" "timer.h" "interrupt.h" "joypad.h")
 
 add_library(gb_components STATIC ${SOURCES})
 
